--- a/app/src/main/res/layout/calcmethod_custom_dialog.xml
+++ b/app/src/main/res/layout/calcmethod_custom_dialog.xml
@@ -126,7 +126,7 @@
                 android:text="17"
                 android:id="@+id/yatsiPicker"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>,,
+                android:layout_height="wrap_content"/>
 
         <Button
                 android:id="@+id/ok"
