--- a/app/src/main/res/layout/calcmethod_dialog.xml
+++ b/app/src/main/res/layout/calcmethod_dialog.xml
@@ -35,9 +35,10 @@
             android:background="#000000"/>
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp">
 
         <TextView
                 android:layout_width="0dp"
@@ -54,9 +55,10 @@
     </LinearLayout>
 
     <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp">
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp">
 
         <TextView
                 android:layout_width="0dp"
