--- a/app/src/main/res/layout/calcmethod_dlgitem.xml
+++ b/app/src/main/res/layout/calcmethod_dlgitem.xml
@@ -20,7 +20,8 @@
               android:orientation="vertical"
               android:paddingBottom="5dp"
               android:paddingStart="10dp"
-              android:paddingTop="5dp">
+              android:paddingTop="5dp"
+              android:paddingLeft="10dp">
 
     <TextView
             android:id="@+id/legacySwitch"
@@ -29,10 +30,11 @@
             android:textSize="18sp"/>
 
     <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="5dp"
-            android:textColor="#444444"
-            android:textSize="12sp"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingStart="5dp"
+        android:textColor="#444444"
+        android:textSize="12sp"
+        android:paddingLeft="5dp"/>
 
 </LinearLayout>
