--- a/app/src/main/res/layout/calendar_item.xml
+++ b/app/src/main/res/layout/calendar_item.xml
@@ -31,7 +31,9 @@
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginBottom="10dip"
-            android:textAppearance="?android:attr/textAppearanceMedium" />
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:layout_alignParentLeft="true"
+            android:layout_alignRight="@+id/next"/>
 
         <TextView
             android:id="@+id/date"
@@ -39,7 +41,8 @@
             android:layout_height="wrap_content"
             android:layout_alignStart="@+id/name"
             android:layout_below="@+id/name"
-            android:textColor="#707070" />
+            android:textColor="#707070"
+            android:layout_alignLeft="@+id/name"/>
 
         <TextView
             android:id="@+id/hicri"
@@ -48,13 +51,15 @@
             android:layout_alignBaseline="@+id/date"
             android:layout_alignBottom="@+id/date"
             android:layout_toStartOf="@+id/next"
-            android:textColor="#707070" />
+            android:textColor="#707070"
+            android:layout_toLeftOf="@+id/next"/>
 
         <View
             android:id="@+id/end"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_alignParentEnd="true" />
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"/>
 
         <ImageView
             android:id="@+id/next"
@@ -64,7 +69,8 @@
             android:layout_toStartOf="@id/end"
             android:contentDescription="@null"
             android:src="@drawable/ic_keyboard_arrow_right_white_24dp"
-            android:tint="#aaaaaa" />
+            android:tint="#aaaaaa"
+            android:layout_toLeftOf="@id/end"/>
     </RelativeLayout>
 
 </FrameLayout>
