--- a/app/src/main/res/layout/vakit_notprefs.xml
+++ b/app/src/main/res/layout/vakit_notprefs.xml
@@ -41,14 +41,15 @@
                 android:text="@string/ongoingNotification"/>
 
         <TextView
-                android:textColor="@color/colorPrimary"
-                android:text="@string/prayerNotification"
-                android:layout_marginStart="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="5dp"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:textColor="@color/colorPrimary"
+            android:text="@string/prayerNotification"
+            android:layout_marginStart="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"/>
 
         <LinearLayout
                 android:translationZ="2dp"
@@ -337,14 +338,15 @@
 
 
         <TextView
-                android:textColor="@color/colorPrimary"
-                android:text="@string/earlyNotification"
-                android:layout_marginStart="20dp"
-                android:paddingTop="10dp"
-                android:paddingBottom="5dp"
-                android:textSize="18sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
+            android:textColor="@color/colorPrimary"
+            android:text="@string/earlyNotification"
+            android:layout_marginStart="20dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="5dp"
+            android:textSize="18sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"/>
 
         <LinearLayout
                 android:translationZ="2dp"
