--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -23,4 +23,5 @@
     <color name="indicator">#4fc3f7</color>
     <color name="kerahat">#e51c23</color>
     <color name="background">#ffffff</color>
+    <color name="background2">#e0e0e0</color>
 </resources>
