--- a/app/src/main/res/layout/vakit_addcity.xml
+++ b/app/src/main/res/layout/vakit_addcity.xml
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_above="@+id/legacySwitch"
             android:layout_alignParentTop="true"
-            android:background="#ffffff"/>
+            android:background="@color/background"/>
 
     <TextView
             android:id="@+id/legacySwitch"
