--- a/app/src/main/res/layout/vakit_main.xml
+++ b/app/src/main/res/layout/vakit_main.xml
@@ -97,6 +97,8 @@
                     class="com.metinkale.prayerapp.vakit.fragments.ImsakiyeFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+
+                    android:background="@color/background"
                     android:layout_alignParentBottom="true"
                     android:tag="imsakiye"
                     tools:layout="@layout/vakit_imsakiye"/>
