--- a/app/src/main/res/layout/vakit_sort_main.xml
+++ b/app/src/main/res/layout/vakit_sort_main.xml
@@ -17,12 +17,12 @@
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:background="#e0e0e0"
+                android:background="@color/background2"
                 android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/list">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/list">
     </android.support.v7.widget.RecyclerView>
 </RelativeLayout>
