--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -20,10 +20,11 @@
 
     <color name="colorPrimary">#013685</color>
     <color name="colorPrimaryDark">#000939</color>
-    <color name="colorPrimaryLight">#69a8f9</color>
+    <color name="colorPrimaryLight">#013685</color>
     <color name="colorNavBar">#ff000000</color>
-    <color name="indicator">#0b6fef</color>
+    <color name="indicator">#000939</color>
     <color name="kerahat">#a23113</color>
     <color name="background">#000000</color>
+    <color name="background2">#101010</color>
 
 </resources>
