fixes + small changes

--- a/app/src/main/res/layout/compass_location.xml
+++ b/app/src/main/res/layout/compass_location.xml
@@ -20,18 +20,20 @@
               android:orientation="vertical">
 
     <EditText
-            android:id="@+id/location"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:lines="1">
+        android:id="@+id/location"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:textColor="#000000"
+        android:singleLine="true"
+        android:lines="1">
 
         <requestFocus/>
     </EditText>
 
     <ListView
-            android:id="@+id/listView"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"></ListView>
+        android:id="@+id/listView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
