--- a/app/src/main/res/layout/compass_map.xml
+++ b/app/src/main/res/layout/compass_map.xml
@@ -36,6 +36,7 @@
         android:layout_marginEnd="20dp"
         android:src="@drawable/ic_gps"
         app:borderWidth="0dp"
+        app:backgroundTint="#ff0000"
         app:elevation="6dp"
         app:fabSize="normal"
         app:pressedTranslationZ="12dp"
