--- a/app/src/main/res/layout/vakit_addcity.xml
+++ b/app/src/main/res/layout/vakit_addcity.xml
@@ -17,26 +17,43 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="fill_parent"
                 android:layout_height="fill_parent"
+                xmlns:app="http://schemas.android.com/apk/res-auto"
                 android:gravity="center_horizontal"
                 android:orientation="vertical">
 
     <ListView
-            android:id="@+id/listView"
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/legacySwitch"
-            android:layout_alignParentTop="true"
-            android:background="@color/background"/>
+        android:id="@+id/listView"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/legacySwitch"
+        android:layout_alignParentTop="true"
+        android:background="@color/background"/>
 
     <TextView
-            android:id="@+id/legacySwitch"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentRight="true"
-            android:background="#aaaaaa"
-            android:gravity="center"
-            android:padding="5dp"/>
+        android:id="@+id/legacySwitch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:background="#aaaaaa"
+        android:gravity="center"
+        android:padding="5dp"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/search"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        app:backgroundTint="#ff0000"
+        android:src="@drawable/ic_search_white_24dp"
+        app:borderWidth="0dp"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="12dp"
+        android:layout_marginRight="20dp"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
