--- a/app/src/main/res/layout/vakit_main.xml
+++ b/app/src/main/res/layout/vakit_main.xml
@@ -16,135 +16,150 @@
   -->
 
 <RelativeLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:baselineAligned="false"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:baselineAligned="false"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <TextView
-            android:id="@+id/holyday"
-            android:layout_width="match_parent"
-            android:layout_height="40dp"
-            android:background="@color/colorPrimary"
-            android:gravity="center"
-            android:textColor="#ffffff"
-            android:textSize="18sp"
-            android:visibility="gone"/>
+        android:id="@+id/holyday"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:background="@color/colorPrimary"
+        android:gravity="center"
+        android:textColor="#ffffff"
+        android:textSize="18sp"
+        android:visibility="gone"/>
 
     <com.metinkale.prayerapp.utils.RTLViewPager
-            android:id="@+id/pager"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/holyday"/>
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/holyday"/>
 
 
     <View
-            android:layout_centerInParent="true"
-            android:layout_height="100dp"
-            android:layout_width="0dp"
-            android:id="@+id/center"/>
+        android:layout_centerInParent="true"
+        android:layout_height="100dp"
+        android:layout_width="0dp"
+        android:id="@+id/center"/>
 
     <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_above="@+id/bottomSlider"
-            android:layout_alignParentTop="true"
-            android:id="@+id/bottomSliderCloseHandler"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/bottomSlider"
+        android:layout_alignParentTop="true"
+        android:id="@+id/bottomSliderCloseHandler"/>
 
 
     <View
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignParentBottom="true"
-            android:layout_below="@+id/topSlider"
-            android:id="@+id/topSliderCloseHandler"/>
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_below="@+id/topSlider"
+        android:id="@+id/topSliderCloseHandler"/>
 
     <com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer
-            android:id="@+id/bottomSlider"
-            android:layout_alignTop="@+id/center"
-            android:layout_alignParentBottom="true"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:orientation="bottom"
-            app:handle="@+id/footerText"
-            app:content="@+id/content">
+        android:id="@+id/bottomSlider"
+        android:layout_alignTop="@+id/center"
+        android:layout_alignParentBottom="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:orientation="bottom"
+        app:handle="@+id/footerText"
+        app:content="@+id/content">
 
         <TextView
-                android:gravity="center"
-                android:id="@+id/footerText"
-                android:layout_width="match_parent"
-                android:layout_height="30dip"
-                android:layout_alignParentBottom="true"
-                android:background="@color/colorPrimary"
-                android:fontFamily="sans-serif-light"
-                android:text="@string/monthly"
-                android:textColor="#ffffff"
-                android:textSize="20sp"/>
+            android:gravity="center"
+            android:id="@+id/footerText"
+            android:layout_width="match_parent"
+            android:layout_height="30dip"
+            android:layout_alignParentBottom="true"
+            android:background="@color/colorPrimary"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/monthly"
+            android:textColor="#ffffff"
+            android:textSize="20sp"/>
 
         <FrameLayout
-                android:id="@+id/content"
-                android:layout_width="match_parent"
-                android:translationZ="2dp"
-                android:layout_gravity="bottom"
-                android:layout_height="match_parent">
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:translationZ="2dp"
+            android:layout_gravity="bottom"
+            android:layout_height="match_parent">
 
             <fragment
-                    class="com.metinkale.prayerapp.vakit.fragments.ImsakiyeFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                class="com.metinkale.prayerapp.vakit.fragments.ImsakiyeFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
 
-                    android:background="@color/background"
-                    android:layout_alignParentBottom="true"
-                    android:tag="imsakiye"
-                    tools:layout="@layout/vakit_imsakiye"/>
+                android:background="@color/background"
+                android:layout_alignParentBottom="true"
+                android:tag="imsakiye"
+                tools:layout="@layout/vakit_imsakiye"/>
 
         </FrameLayout>
     </com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer>
 
     <com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer
-            android:id="@+id/topSlider"
-            android:layout_alignParentTop="true"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/center"
-            app:orientation="top"
-            app:handle="@+id/handle"
-            app:content="@+id/content">
+        android:id="@+id/topSlider"
+        android:layout_alignParentTop="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignBottom="@+id/center"
+        app:orientation="top"
+        app:handle="@+id/handle"
+        app:content="@+id/content">
 
         <View
-                android:gravity="center"
-                android:id="@+id/handle"
-                android:layout_width="match_parent"
-                android:layout_height="30dip"/>
+            android:gravity="center"
+            android:id="@+id/handle"
+            android:layout_width="match_parent"
+            android:layout_height="30dip"/>
 
         <FrameLayout
-                android:id="@id/content"
-                android:layout_width="match_parent"
-                android:layout_gravity="bottom"
-                android:translationZ="2dp"
-                android:layout_height="match_parent">
+            android:id="@id/content"
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
+            android:translationZ="2dp"
+            android:layout_height="match_parent">
 
             <fragment
-                    class="com.metinkale.prayerapp.vakit.fragments.SettingsFragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:tag="settings"
-                    tools:layout="@layout/vakit_settings"/>
+                class="com.metinkale.prayerapp.vakit.fragments.SettingsFragment"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:tag="settings"
+                tools:layout="@layout/vakit_settings"/>
 
         </FrameLayout>
     </com.metinkale.prayerapp.utils.MultipleOrientationSlidingDrawer>
 
     <FrameLayout
-            android:translationZ="2dp"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/fragContainer"></FrameLayout>
+        android:translationZ="2dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/fragContainer"></FrameLayout>
 
-
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/addCity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:src="@drawable/ic_add_white_24dp"
+        app:borderWidth="0dp"
+        app:backgroundTint="#ff0000"
+        app:elevation="6dp"
+        app:fabSize="normal"
+        app:pressedTranslationZ="12dp"
+        android:layout_marginRight="20dp"
+        android:layout_alignParentRight="true"/>
 </RelativeLayout>
 
