about us + new menu

--- a/app/src/main/res/values-v19/themes.xml
+++ b/app/src/main/res/values-v19/themes.xml
@@ -17,7 +17,7 @@
 <resources>
 
     <style name="AppBaseTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowTranslucentStatus">false</item>
         <item name="android:windowTranslucentNavigation">false</item>
     </style>
 
